--- a/client/src/pages/Profile/StudentProfile.css
+++ b/client/src/pages/Profile/StudentProfile.css
@@ -1,6 +1,5 @@
 .topnav {
 height: 100px;
-margin: 1% 1% 1% 1%;
 background: #D9D9D9;
 border-radius: 20px;
 justify-content: space-between;
@@ -12,6 +11,7 @@ max-height: 80px;
 float: left;
 margin: inherit;
 }
+
 .endPhotos {
 width: auto;
 max-height: 80px;
@@ -33,9 +33,7 @@ margin: 1%;
 }
 
 .content {
-margin: 1%;
-background: #D9D9D9;
-border-radius: 20px;
+  background: white;
 }
 
 .top {
@@ -43,11 +41,9 @@ background: #1E1E1E;
 width: 100%;
 height: 200px;
 object-fit: cover;
-border-radius: 20px;
 }
 
 .profileImage {
-border-radius: 300px;
 height: 150px;
 width: 150px;
 margin-top: -7.5%;
@@ -59,24 +55,13 @@ flex-direction: row;
 justify-content: space-between;
 }
 
-.basic {
-margin-top: 2%;
-margin-left: 5%;
-}
-
-.schools {
-margin-left: 0%;
-height: 100%;
-background-color: #fff;
-}
-
-.preferences {
-margin: 1%;
-height: 100%;
-background-color: #fff;
-}
-
 p {
 font-size: 24px;
 line-height: 10px;
+}
+
+.student-profile-main {
+  background-color: whitesmoke;
+  margin: 0px;
+  height: calc(100vh - 60px);
 }
