Home page finished front end

--- a/client/src/custom.scss
+++ b/client/src/custom.scss
@@ -1,7 +1,7 @@
 // Override default variables before the import
 $theme-colors: (
   "primary": #DEE2FF,
-  "secondary": #EFD3D7,
+  "secondary":  #fff2ef,
 );
 
 // Import Bootstrap and its default variables
