--- a/client/src/pages/Profile/StudentProfile.css
+++ b/client/src/pages/Profile/StudentProfile.css
@@ -1,35 +1,16 @@
 .topnav {
-height: 100px;
 margin: 1% 1% 1% 1%;
 background: #D9D9D9;
 border-radius: 20px;
-justify-content: space-between;
 }
 
 .photos {
-width: auto;
 max-height: 80px;
-float: left;
-margin: inherit;
-}
-.endPhotos {
-width: auto;
-max-height: 80px;
-float: right;
-margin: inherit;
 }
 
 .fields {
-width: auto;
-float: left;
-height: 80%;
-max-height: 80px;
-margin: inherit;
 font-size: 32px;
-}
-
-.link {
-margin: 1%;
+width: 80%
 }
 
 .content {
@@ -54,29 +35,35 @@ margin-top: -7.5%;
 margin-left: 5%;
 }
 .bottom {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
+height: 100%;
+margin: 1%;
 }
 
 .basic {
-margin-top: 2%;
-margin-left: 5%;
+width: 10%;
 }
 
 .schools {
 margin-left: 0%;
-height: 100%;
+height: 400px;
+width: 20%;
 background-color: #fff;
 }
 
 .preferences {
 margin: 1%;
-height: 100%;
+height: 400px;
+width: 20%;
 background-color: #fff;
 }
 
 p {
 font-size: 24px;
 line-height: 10px;
+margin: 3%
+}
+.info {
+padding: 2%;
+line-height: 30px;
+font-size: 32px;
 }
